examples/errors/MacroArgCountMismatch.huff
#define macro MAIN(a, skbidi) = takes(0) returns(0) {
    WOW(0x1)
    WOW(0x1, 0x2, 0x3)
}

#define macro WOW(a, b) = takes(0) returns(0) {
    <a>
    0x7479
    add
    <b>
    return
}
